tests/fixtures/invalid/min_float_dict.py
# Cannot call min() with Float, Dict[str, int]
x = min(1.0, {"a": 1})
